--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/d3": "^7.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -30,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"d3": "^7.8.2",
 		"svelte-icons": "^2.1.0"
 	}
 }
